# command

./: .gitignore  .travis.yml  Makefile.am  README  README.md  configure.ac
debian/: changelog
docs/: Doxyfile.in  Makefile.am
include/: Makefile.am  argument.h  callable.h  command.h  descriptive.h  multiValue.h  option.h  parameter.h  required.h
include/exception/: missingOptionValue.h  optionFailedConversion.h
src/: main.cpp
tests/: .gitignore  Makefile.am
tests/argument/: handles_boolean_value.cpp  handles_float_value.cpp  handles_int_value.cpp  handles_negative_float_value.cpp  handles_negative_int_value.cpp  handles_string_value.cpp
tests/callable/: TestCallable.h  invokes_provided_function.cpp  invokes_void_function.cpp
tests/command/: understand_bool_option.test
tests/command/src/: option_test_command.cpp
tests/multiValue/: should_extract_arguments_by_separator.cpp  should_extract_options_by_separator.cpp
tests/option/: handles_boolean_value.cpp  handles_float_value.cpp  handles_int_value.cpp  handles_negative_float_value.cpp  handles_negative_int_value.cpp  handles_string_value.cpp  handles_void_value.cpp  should_match_exact_name.cpp  should_throw_exception_on_missing_value.cpp
tests/parameter/: TestParameter.h  is_descriptive.cpp
tests/required/: should_be_required.cpp
