AC_INIT([Command], [0.1], [bugz@dlugolecki.net.pl], [command], [http://dlugolecki.net.pl/software/command/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([
    Makefile
])
#    include/Makefile
#    tests/Makefile
#    docs/Makefile

AC_OUTPUT

